fixed datejs functionality

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <form class="pure-form pure-form-stacked center" action="">
           <label class="aside-element" id="city"><h2>Search for a City: </h2></label>
           <input class="aside-element" type="search" id="city" name="city" placebolder="">
-          <button id="search-button" class="aside-element pure-button bure-button-primary" type="button">Search</button>
+          <button id="search-button" class="aside-element pure-button pure-button-primary" type="button">Search</button>
         </form>
       </section>
       <section id="city-list" class="center"></section>
@@ -35,8 +35,8 @@
         </div>
       </div>
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.7/dayjs.min.js" integrity="sha512-bwD3VD/j6ypSSnyjuaURidZksoVx3L1RPvTkleC48SbHCZsemT3VKMD39KknPnH728LLXVMTisESIBOAb5/W0Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./assets/java.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.7/dayjs.min.js"></script>
   </div>
 </body>
 </html>
